# QK4

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONVENTIONS.md  README.md  index.html  releases.json  style.css
.github/scripts/: build-pi.sh
.github/workflows/: lint.yml  release.yml
src/: mainwindow.cpp  mainwindow.h
src/audio/: audioengine.cpp  audioengine.h  opusdecoder.cpp  opusencoder.h  sidetonegenerator.cpp  sidetonegenerator.h
src/controllers/: audiocontroller.cpp  audiocontroller.h  connectioncontroller.cpp  connectioncontroller.h  hardwarecontroller.cpp  hardwarecontroller.h  spectrumcontroller.cpp  spectrumcontroller.h
src/dsp/: minipan_rhi.cpp  minipan_rhi.h  panadapter_constants.h  panadapter_rhi.cpp  panadapter_rhi.h  rhi_utils.h
src/dsp/shaders/: waterfall.frag  waterfall.vert
src/hardware/: halikeydevice.cpp  halikeydevice.h  halikeymidiworker.cpp  halikeymidiworker.h  halikeyv14worker.cpp  iambickeyer.cpp  iambickeyer.h  kpoddevice.cpp
src/models/: menumodel.cpp  menumodel.h  radiostate.cpp  radiostate.h
src/network/: catserver.cpp  k4discovery.cpp  k4discovery.h  kpa1500client.cpp  networkmetrics.cpp  networkmetrics.h  protocol.cpp  protocol.h  tcpclient.cpp  tcpclient.h
src/settings/: radiosettings.cpp  radiosettings.h
src/ui/: aboutpage.cpp  aboutpage.h  antennacfgpopup.cpp  antennacfgpopup.h  audioinputpage.cpp  audioinputpage.h  audiooutputpage.cpp  audiooutputpage.h  bandpopupwidget.cpp  buttonrowpopup.cpp  controlgroupwidget.cpp  controlgroupwidget.h  cwkeyerpage.cpp  cwkeyerpage.h  displaymenubutton.cpp  displaymenubutton.h  displaypopupwidget.cpp  displaypopupwidget.h  dualcontrolbutton.cpp  dualcontrolbutton.h  featuremenubar.cpp  featuremenubar.h  filterindicatorwidget.cpp  filterindicatorwidget.h  fnpopupwidget.h  frequencydisplaywidget.cpp  frequencydisplaywidget.h  k4popupbase.cpp  k4styles.cpp  k4styles.h  keyingweightpopup.cpp  keyingweightpopup.h  kpa1500minipanel.cpp  kpa1500minipanel.h  kpa1500page.cpp  kpa1500page.h  kpa1500panel.cpp  kpa1500window.cpp  kpa1500window.h  kpodpage.cpp  (+43 more)
src/utils/: radioutils.cpp  radioutils.h
tests/: CMakeLists.txt  test_catserver.cpp  test_protocol.cpp  test_radiostate.cpp  test_radioutils.cpp
